--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2777,6 +2777,9 @@ a {
 }
 
 .portfolio-card__button-right:hover {
+  -webkit-transform: translateY(-5px);
+      -ms-transform: translateY(-5px);
+          transform: translateY(-5px);
   background-color: #c93920;
   color: #ffd3c6;
   -webkit-box-shadow: inset 0 0 1em 0 #c94520, 0 0 1em 0 #c94520;
