--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1890,9 +1890,9 @@ a {
   border-radius: 100px;
   -webkit-box-shadow: 4px 4px 4px rgba(109, 109, 109, 0.606) inset, -4px -4px 4px rgba(255, 255, 255, 0.616) inset;
           box-shadow: 4px 4px 4px rgba(109, 109, 109, 0.606) inset, -4px -4px 4px rgba(255, 255, 255, 0.616) inset;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: border 0.3s;
+  -o-transition: border 0.3s;
+  transition: border 0.3s;
 }
 
 .nav-menu .nav-list__item-link--active:hover {
@@ -2932,6 +2932,30 @@ ion-icon {
 
 .contact-me__contact-info-container {
   padding-right: 1.25rem;
+}
+
+._sending-mail {
+  position: relative;
+}
+
+._sending-mail::after {
+  border-radius: 1.25rem;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  border: solid 1px #4eb869;
+  color: #367c47;
+  text-align: center;
+  -webkit-box-shadow: inset 0 0 0.5em 0 #3c9051, 0 0 0.5em 0 #3c9051;
+          box-shadow: inset 0 0 0.5em 0 #3c9051, 0 0 0.5em 0 #3c9051;
+  -webkit-backdrop-filter: blur(7px);
+          backdrop-filter: blur(7px);
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .contact-me__form {
