--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -129,6 +129,8 @@ a {
 	backdrop-filter: blur(10px);
 	box-shadow: $box-shadow-in;
 	border-radius: 80px;
+	max-width: rem(1280);
+	width: 100%;
 	// margin: 50px;
 	// padding: 40px;
 	@include adaptive-value("margin", 50, 12, 0);
@@ -1704,6 +1706,7 @@ ion-icon {
 	margin: 0;
 	padding: 0;
 	border-radius: 0;
+	max-width: 100%;
 	// height: 200px;
 	// border-top: solid 1px #939393;
 	background-color: #58524b9c;
