added a new portfolio

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -78,6 +78,8 @@
  }
  ._icon-vue:before {
 	content: "\e911";
+	text-shadow: 0 0 10px #59dda1;
+	color: #11291e;
  }
  ._icon-react:before {
 	content: "\e912";
