--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,8 +18,11 @@ $light: rgba(255, 255, 255, 0.616);
 $color-mark: #3c9051;
 $color-mark-second: #23255c;
 $bg-out-scroll: rgb(76, 83, 97);
+
 $bg-button-second: #c9a220;
 $bg-button-text-second: #8f7316;
+$color-bunner-count: #f54242;
+
 $bg-mark-card: #c9a220;
 $bg-card-portfolio: rgb(235, 236, 232);
 
@@ -228,7 +231,6 @@ a {
 		.nav-list__item-link--active {
 			transition: box-shadow .2s;
 			border: solid 5px $color-mark;
-			border-radius: 100px;
 			box-shadow:$box-shadow-out;
 			transition: border .3s;
 			
@@ -236,6 +238,26 @@ a {
 				box-shadow:$box-shadow-out-hover;
 			}
 		}
+}
+
+.menu-lit-portfolio{
+	position: relative;
+	&::after {
+		content: attr(data-bunner);
+		position: absolute;
+		right: 0;
+		top: 0;
+		transform: translate(30%, -30%);
+		background-color: $color-bunner-count;
+		color: #ffff;
+		width: 30px;
+		aspect-ratio: 1/1;
+		border-radius: 100vw;
+		display: flex;
+		justify-content:center;
+		align-items: center;
+		box-shadow: $box-shadow-in;
+	}
 }
 
 	.nav-list {
@@ -259,6 +281,7 @@ a {
 			width: 100%;
 			padding: 10px;
 			border-radius: 100px;
+			// border-radius: 1rem;
 			background-color: $bg;
 			// transition: all .3s;
 			
@@ -268,6 +291,8 @@ a {
 		}
 
 	}
+
+
 
 .button-nav {
 			box-shadow: $box-shadow-in;
